<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.vrrv.musicplayer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_full_album"
        android:name="com.vrrv.musicplayer.ui.fullalbum.FullAlbumFragment"
        android:label="FULLALBUM"
        tools:layout="@layout/fragment_full_album" />

    <fragment
        android:id="@+id/navigation_podcast"
        android:name="com.vrrv.musicplayer.ui.podcast.PodcastFragment"
        android:label="@string/title_podcast"
        tools:layout="@layout/fragment_podcast"/>

    <fragment
        android:id="@+id/navigation_full_podcast"
        android:name="com.vrrv.musicplayer.ui.fullpodcast.FullPodcastFragment"
        android:label="FULLPODCAST"
        tools:layout="@layout/fragment_full_podcast" />

    <fragment
        android:id="@+id/navigation_my_library"
        android:name="com.vrrv.musicplayer.ui.mylibrary.MyLibraryFragment"
        android:label="@string/title_my_library"
        tools:layout="@layout/fragment_my_library" />
</navigation>